added important information section in blog posts

--- a/google-news-kings.html
+++ b/google-news-kings.html
@@ -76,6 +76,13 @@
                         </b></p>
                     </div>
                 </div><!-- end of blog wrapper -->
+                <h5>Important Informations</h5>
+                <p><strong>Producer - Golden SEO Club</strong></p>
+                <p><strong>Where to Buy Google News Kings - <a href="https://5207bdzpy4p39pejr5egqfuufs.hop.clickbank.net"  target="_blank"><span class="badge badge-info">Official Website</span></a></strong></p>
+                <p><strong>Warranty Details - 30 day 100% Money Back Guarantee</strong></p>
+                <p><strong>Availability - Online</strong></p>
+                <p><strong>Rating: - ⭐⭐⭐⭐⭐</strong></p>
+                <hr>
 
                 <div class="py-5">
                     <p class="para-blog">Welcome to the world of online news and website traffic! If you are struggling to get your website noticed on Google searches, then you're in the right place. I've got some amazing news for you – there is a way to boost your website traffic, authority, and backlinks without putting in endless hours of work. This revolutionary way is called the Google News Kings traffic formula!
