--- a/magic-submitter.html
+++ b/magic-submitter.html
@@ -76,7 +76,13 @@
                         </b></p>
                     </div>
                 </div><!-- end of blog wrapper -->
-
+                <h5>Important Informations</h5>
+                <p><strong>Producer - Magic Submitter</strong></p>
+                <p><strong>Where to Buy Magic Submitter - <a href="https://a7067iynsxn0du8eyec8ln7dxv.hop.clickbank.net"  target="_blank"><span class="badge badge-info">Official Website</span></a></strong></p>
+                <p><strong>Warranty Details - 30 day 100% Money Back Guarantee</strong></p>
+                <p><strong>Availability - Online</strong></p>
+                <p><strong>Rating: - ⭐⭐⭐⭐⭐</strong></p>
+                <hr>
                 <div class="py-5">
                     <p class="para-blog">With so many different SEO tools on the market, it can be hard to know which ones to choose. That's why we're here to help. In this review, we're going to take a closer look at Magic Submitter, and help you decide whether it's the right tool for you.
                         So what sets Magic Submitter apart from other SEO tools on the market? For one thing, it's incredibly powerful and versatile. Whether you're looking to build backlinks, increase traffic, or improve your search engine rankings, Magic Submitter has the tools and features you need to get the job done.
