added new page - power-suggest-pro.html

--- a/global-macro.html
+++ b/global-macro.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Maciej Jaroszewski | Global Macro</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="HTMX provides a user-friendly front-end technology for fast and dynamic web app development with Bokeh for data visualization. Django applications and optimized testing ensure scalability and security.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="mjaroszewski, django, python, bokeh, htmx" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/global-macro.html" />
+    <meta property="og:title" content="Maciej Jaroszewski | Global Macro" />
+    <meta property="og:description" content="HTMX provides a user-friendly front-end technology for fast and dynamic web app development with Bokeh for data visualization. Django applications and optimized testing ensure scalability and security." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Maciej Jaroszewski | Global Macro" />
+    <meta name="twitter:description" content="HTMX provides a user-friendly front-end technology for fast and dynamic web app development with Bokeh for data visualization. Django applications and optimized testing ensure scalability and security." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/global-macro.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
