--- a/index.html
+++ b/index.html
@@ -335,6 +335,23 @@
                 </div>
             </div><!-- end of blog wrapper -->
 
+            <!-- blog-wrapper -->
+            <div class="blog-card">
+                <div class="blog-card-header">
+                    <img src="assets/imgs/post-03.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                </div>
+                <div class="blog-card-body">
+                    <h5 class="blog-card-title">Power Suggest Pro | 2023</h6>
+
+                    <p class="blog-card-caption">
+                        <a href="#">By: Maciej Jaroszewski</a>
+                        <p><b>Keyword research is an essential aspect of any successful online marketing strategy. It helps businesses identify the keywords and phrases that their target audience is using to search for information, products, and services online. However, finding the right keywords can be a challenging task, especially when there are thousands of variations to choose from.
+                            By using Power Suggest Pro in your keyword research process, you can create content that is highly relevant to your audience and that will help you achieve your business goals. 
+                        </b></p>
+                    <a href="power-suggest-pro.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                </div>
+            </div><!-- end of blog wrapper -->
+
         </div><!-- end of container -->
     </section><!-- end of blog section -->
 
