--- a/video.html
+++ b/video.html
@@ -59,12 +59,21 @@
     <section>
         <div class="container-video">
             <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/q-PXNaPwBiM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/KE6uEQTRhEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-
+            <br>
+            <hr>
+            <div class="container text-center">
+                <h3>Video Features:</h3>
+                <p><strong>MidJourney - Is an artificial intelligence program that generates images from natural language descriptions, called "prompts".</strong></p>
+                <p><strong>Studio D-ID - Uses real-time face animation and advanced text-to-speech to create an immersive and human-like conversational AI experience.</strong></p>
+                <p><strong>Audacity - Is an easy-to-use, free, open source, multi-track audio editor and recorder for Windows, macOS, GNU/Linux and other operating systems. </strong></p>
+                <p><strong>Shotcut - Useful, feature-packed, and hassle-free online video editor & video maker with trendy video effects.</strong></p>
+            </div>
         </div>
 
     </section>
+
 
     
 
