added seo-optimized titles and meta description content for web dev section pages

--- a/experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html
+++ b/experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Experience Seamless User Interaction with HTMX, Django, Amazon S3, and Google Authentication</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Create a personalized list of your favorite cars with this Django application featuring Python, HTMX, and Amazon S3 integration. Authenticate with your Google account, and upload images of your choice to enhance your list. Enjoy a smooth user experience with drag-and-drop reordering and HTMX technology, which simplifies development by enabling interactive web pages with minimal effort. HTMX's use of HTML and CSS generates dynamic updates on the server-side, making it an ideal choice for developers. ">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="mjaroszewski, django, python, HTMX, Amazon S3, Selenium" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html" />
+    <meta property="og:title" content="Experience Seamless User Interaction with HTMX, Django, Amazon S3, and Google Authentication" />
+    <meta property="og:description" content="Create a personalized list of your favorite cars with this Django application featuring Python, HTMX, and Amazon S3 integration. Authenticate with your Google account, and upload images of your choice to enhance your list. Enjoy a smooth user experience with drag-and-drop reordering and HTMX technology, which simplifies development by enabling interactive web pages with minimal effort. HTMX's use of HTML and CSS generates dynamic updates on the server-side, making it an ideal choice for developers. " />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Experience Seamless User Interaction with HTMX, Django, Amazon S3, and Google Authentication" />
+    <meta name="twitter:description" content="Create a personalized list of your favorite cars with this Django application featuring Python, HTMX, and Amazon S3 integration. Authenticate with your Google account, and upload images of your choice to enhance your list. Enjoy a smooth user experience with drag-and-drop reordering and HTMX technology, which simplifies development by enabling interactive web pages with minimal effort. HTMX's use of HTML and CSS generates dynamic updates on the server-side, making it an ideal choice for developers. " />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/django-cars.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
