--- a/explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html
+++ b/explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Explore Global Macro Trends with Python, Django, Bokeh and HTMX Technology</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Explore global economic trends with this visually engaging Django application featuring Python, Pandas-Datareader, Bokeh, and HTMX. Discover insights with powerful and interactive graphs, powered by Bokeh, and enjoy a seamless user experience with HTMX's asynchronous HTTP requests. Make informed decisions with clear and insightful charts, all presented in a user-friendly interface.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="mjaroszewski, django, python, bokeh, htmx" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html" />
+    <meta property="og:title" content="Explore Global Macro Trends with Python, Django, Bokeh and HTMX Technology" />
+    <meta property="og:description" content="Explore global economic trends with this visually engaging Django application featuring Python, Pandas-Datareader, Bokeh, and HTMX. Discover insights with powerful and interactive graphs, powered by Bokeh, and enjoy a seamless user experience with HTMX's asynchronous HTTP requests. Make informed decisions with clear and insightful charts, all presented in a user-friendly interface." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Explore Global Macro Trends with Python, Django, Bokeh and HTMX Technology" />
+    <meta name="twitter:description" content="Explore global economic trends with this visually engaging Django application featuring Python, Pandas-Datareader, Bokeh, and HTMX. Discover insights with powerful and interactive graphs, powered by Bokeh, and enjoy a seamless user experience with HTMX's asynchronous HTTP requests. Make informed decisions with clear and insightful charts, all presented in a user-friendly interface." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/global-macro.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -63,19 +79,19 @@
             <!-- container -->
             <div class="container text-center">
                 <p class="section-subtitle text-secondary"><strong>Django Application</strong></p>
-                <h6 class="section-title mb-6 text-light">Famous Investors</h6>
+                <h6 class="section-title mb-6 text-light">Global Macro</h6>
                 <!-- blog-wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/famous-investors.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/global-macro.png" class="blog-card-img" alt="global macro website mockup">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This application utilizes the Django framework and its Object-Relational Mapper (ORM) to facilitate the retrieval of stored data.</h6>
-                            <p><b>It is connected to a MySQL database hosted on the Pythonanywhere server. The software's primary objective is to enable users to execute complex filtering operations while prioritizing the speed and efficiency of querying.
-                                By utilizing this software, users can save valuable time by executing advanced filtering operations quickly and efficiently. Additionally, the software's Python and Django backend offer flexibility and customizability, making it an ideal choice for users who want to customize their querying process to fit their specific needs. 
+                        <h5 class="blog-card-title">Designed to offer a user-friendly and visually appealing interface that engages users with dynamic and interactive graphs.</h6>
+                        <p><b>HTMX is a front-end technology that allows the application to provide a more engaging and responsive experience without sacrificing performance or simplicity. This technology enables the application to make asynchronous HTTP requests to the server to fetch data and update the UI accordingly, creating a seamless experience for the user.
+                            In addition to the HTMX functionality, this application also incorporates Bokeh, a powerful data visualization library that provides users with highly interactive and engaging graphs. Bokeh allows users to explore data in a visual way, providing more insight and making complex data sets more accessible. 
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/investors_v2" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
+                        <a href="https://github.com/mjaroszewski1979/django_global_macro" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <h2>Features:</h2>
@@ -84,13 +100,17 @@
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li>Django's <strong>Cross-Site Request Forgery Protection</strong> works by using a unique token to validate each form submission on the server-side, and also includes other built-in security features like user authentication and authorization, password hashing, and SSL encryption to protect against common security threats.</li>
+                                <li><strong>Pandas-Datareader</strong> package makes it simple to access and read data from online sources such as the FRED API, and it guarantees accuracy when importing historical time series. </li>
                                 <br>
-                                <li>With Django's<strong> annotate() function</strong>, developers can compute new fields based on existing queryset fields, like the average rating of a product, total comments on a blog post, or total orders by a customer, resulting in more efficient code and improved application performance.</li>
+                                <li><strong>Python's Threading Module</strong> enables developers to run multiple threads simultaneously within a program, providing faster and more efficient execution.</li>
                                 <br>
-                                <li>Django's <strong>aggregate() function</strong> is a powerful tool for developers to perform complex calculations and obtain summary statistics on a queryset efficiently with minimal code.</li>
+                                <li>Utilizing <strong>template inheritance mechanism</strong> to create a visually appealing and user-friendly interface. This involves building a base template with common elements and defining blocks that child templates can override, allowing for a consistent and easily modifiable design.</li>
                                 <br>
-                                <li>By using <strong>select_related</strong>, developers can significantly reduce the number of database queries needed to retrieve data, which can improve the performance of their application.</li>
+                                <li><strong>HTMX</strong> is a user-friendly library that simplifies the creation of highly dynamic and interactive web applications without requiring the use of complex JavaScript or CSS frameworks.</li>
+                                <br>
+                                <li>To serve static files with high performance and efficiency, you can use <strong>WhiteNoise</strong> - a Python library that caches files in memory, compresses them on the fly, and can be configured to use HTTPS.</li>
+                                <br>
+                                <li><strong>Bokeh</strong> is an excellent Python library for creating visually appealing and easy-to-understand data visualizations, including line charts, bar plots, and hexagonal tiles for binned aggregations.</li>
                                 <br>
                                 <li><strong>Breaking down logic into smaller parts</strong>: to achieve improved code organization, maintainability, and scalability, while also making it easier to debug and test individual parts of the codebase I have created smaller, focused Django applications within the project.</li>
                                 <br>
