--- a/get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html
+++ b/get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Get Accurate IP Geolocation Data with Our JSON Web Token Authenticated Django Rest API</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Looking to build Python applications with IP geolocation data? Look no further than our Django Rest Framework API project. With the power of JSON Web Token authentication and a custom IP geolocation database, developers can quickly and easily create powerful applications that make use of IP geolocation data. Our project allows for easy creation, viewing, and deletion of geolocation records by users, and the built-in support for serialization, authentication, and validation makes it easy to create robust and secure APIs.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="mjaroszewski, django rest framework, python, JSON web token, IP geolocation API, Selenium" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html" />
+    <meta property="og:title" content="Get Accurate IP Geolocation Data with Our JSON Web Token Authenticated Django Rest API" />
+    <meta property="og:description" content="Looking to build Python applications with IP geolocation data? Look no further than our Django Rest Framework API project. With the power of JSON Web Token authentication and a custom IP geolocation database, developers can quickly and easily create powerful applications that make use of IP geolocation data. Our project allows for easy creation, viewing, and deletion of geolocation records by users, and the built-in support for serialization, authentication, and validation makes it easy to create robust and secure APIs." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Get Accurate IP Geolocation Data with Our Python Django Rest API" />
+    <meta name="twitter:description" content="Looking to build Python applications with IP geolocation data? Look no further than our Django Rest Framework API project. With the power of JSON Web Token authentication and a custom IP geolocation database, developers can quickly and easily create powerful applications that make use of IP geolocation data. Our project allows for easy creation, viewing, and deletion of geolocation records by users, and the built-in support for serialization, authentication, and validation makes it easy to create robust and secure APIs." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/geo-api.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -62,20 +78,20 @@
         <section class="section" id="blog">
             <!-- container -->
             <div class="container text-center">
-                <p class="section-subtitle text-secondary"><strong>Django Application</strong></p>
-                <h6 class="section-title mb-6 text-light">MJ Cars</h6>
+                <p class="section-subtitle text-secondary"><strong>Django Rest Framework Application</strong></p>
+                <h6 class="section-title mb-6 text-light">Geo API</h6>
                 <!-- blog-wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/golden-cross.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/geo-api.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This is a Python application that is designed to display trading signals based on a mathematical algorithm.</h6>
-                            <p><b>The algorithm determines the ideal time to buy or sell Bitcoin. The application fetches data from the Yahoo Finance API and calculates the current trend direction using a 252-day lookback period which is approximately one year.
-                                Once the calculations are complete, the results are presented in a user-friendly table format. This application is ideal for traders who are looking to make data-driven decisions when it comes to buying or selling Bitcoin. With the help of the algorithm, the application can analyze large amounts of data and provide recommendations on when to make a move.
+                        <h5 class="blog-card-title">This project is built on the Django Rest Framework API platform and uses the JSON Web Token authentication mechanism to enable easy access to an IP geolocation database for Python applications. </h6>
+                            <p><b>By leveraging the power of the Django Rest Framework API and the convenience of JWT authentication, developers can quickly and easily create powerful applications that make use of IP geolocation data. 
+                                The Django Rest Framework API is a powerful tool for developers who want to create web APIs quickly and easily using the Django framework. With its built-in support for serialization, authentication, and validation, the Django Rest Framework API makes it easy for developers to create robust and secure APIs that can be used by a wide range of applications.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/golden-cross-v1" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
+                        <a href="https://github.com/mjaroszewski1979/geo_api_v1" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <h2>Features:</h2>
@@ -84,23 +100,21 @@
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li><strong>MailChimp</strong> is a powerful tool that allows us to easily create and manage email campaigns. With its user-friendly interface and extensive features, we can customize our emails and make them more engaging for our audience.</li>
+                                <li>With a wide range of customizable components and responsive design, <strong>Bulma</strong> makes it easy to create beautiful and functional web interfaces that work well on both desktop and mobile devices.</li>
                                 <br>
-                                <li>The <strong>Technical Analysis Library</strong> is a powerful tool for those in the financial industry who need to analyze and manipulate large sets of financial data quickly and easily. This library offers advanced statistical tools and techniques.</li>
-                                <br>
-                                <li><strong>Pandas-Datareader</strong> package makes it simple to access and read data from online sources such as the FRED API, and it guarantees accuracy when importing historical time series.</li>
-                                <br>
-                                <li>Utilizing <strong>template inheritance mechanism</strong> to create a visually appealing and user-friendly interface. This involves building a base template with common elements and defining blocks that child templates can override, allowing for a consistent and easily modifiable design.</li>
+                                <li>This project has a strong and secure <strong>user authentication system</strong> that manages user accounts, cookies and sessions, and permissions, ensuring that users can access the resources they need while maintaining the security and integrity of the application.</li>
                                 <br>
                                 <li>Django's <strong>Cross-Site Request Forgery Protection</strong> works by using a unique token to validate each form submission on the server-side, and also includes other built-in security features like user authentication and authorization, password hashing, and SSL encryption to protect against common security threats.</li>
+                                <br>
+                                <li>To serve static files with high performance and efficiency, you can use <strong>WhiteNoise</strong> - a Python library that caches files in memory, compresses them on the fly, and can be configured to use HTTPS.</li>
+                                <br>
+                                <li><strong>JSON Web Token (JWT)</strong> is a widely used security mechanism that allows for the exchange of information between a client and server in a secure and reliable manner. It uses a cryptographic algorithm to sign sensitive data and ensures that it cannot be altered once it has been issued.</li>
                                 <br>
                                 <li><strong>Breaking down logic into smaller parts</strong>: to achieve improved code organization, maintainability, and scalability, while also making it easier to debug and test individual parts of the codebase I have created smaller, focused Django applications within the project.</li>
                                 <br>
                                 <li><strong>Writing most of the functionality in Django models or utility files instead of views</strong> to enhance application performance, as they are loaded only once when the application starts up, thus reducing loading and processing costs.</li>
                                 <br>
                                 <li>To ensure sensitive information is kept secure, we store API keys, database passwords, and other credentials in <strong>environment variables</strong>. </li>
-                                <br>
-                                <li>In Django, we can optimize tests by <strong>utilizing the setUp</strong> method to handle expensive setup operations for all tests within a module, which saves time and resources, and makes our tests more reliable. </li>
                                 <br>
                                 <li><strong>The page object pattern</strong> follows the DRY principle, minimizing code duplication, and creates an interface between web page elements and tests, resulting in more robust tests and better test organization.</li>
                             </ul>
