--- a/customizable-querying-with-python-django-and-mysql-retrieve-your-data-with-ease.html
+++ b/customizable-querying-with-python-django-and-mysql-retrieve-your-data-with-ease.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Customizable Querying with Python, Django, and MySQL: Retrieve Your Data with Ease</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Optimize your querying process with this powerful Python application built on Django and MySQL. With the Object-Relational Mapper (ORM), users can retrieve stored data quickly and efficiently. Designed to execute complex filtering operations with speed and efficiency, this software saves users valuable time. Python and Django backend offer flexibility and customizability, allowing users to customize their querying process to fit their specific needs. Access and query your data with ease.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="mjaroszewski, django, python, MySQL, ORM" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/customizable-querying-with-python-django-and-mysql-retrieve-your-data-with-ease.html" />
+    <meta property="og:title" content="Customizable Querying with Python, Django, and MySQL: Retrieve Your Data with Ease" />
+    <meta property="og:description" content="Optimize your querying process with this powerful Python application built on Django and MySQL. With the Object-Relational Mapper (ORM), users can retrieve stored data quickly and efficiently. Designed to execute complex filtering operations with speed and efficiency, this software saves users valuable time. Python and Django backend offer flexibility and customizability, allowing users to customize their querying process to fit their specific needs. Access and query your data with ease." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Customizable Querying with Python, Django, and MySQL: Retrieve Your Data with Ease" />
+    <meta name="twitter:description" content="Optimize your querying process with this powerful Python application built on Django and MySQL. With the Object-Relational Mapper (ORM), users can retrieve stored data quickly and efficiently. Designed to execute complex filtering operations with speed and efficiency, this software saves users valuable time. Python and Django backend offer flexibility and customizability, allowing users to customize their querying process to fit their specific needs. Access and query your data with ease." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/famous-investors.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -62,20 +78,20 @@
         <section class="section" id="blog">
             <!-- container -->
             <div class="container text-center">
-                <p class="section-subtitle text-secondary"><strong>Django Rest Framework Application</strong></p>
-                <h6 class="section-title mb-6 text-light">Geo API</h6>
+                <p class="section-subtitle text-secondary"><strong>Django Application</strong></p>
+                <h6 class="section-title mb-6 text-light">Famous Investors</h6>
                 <!-- blog-wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/geo-api.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/famous-investors.png" class="blog-card-img" alt="famous ivestors website mockup">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This project is built on the Django Rest Framework API platform and uses the JSON Web Token authentication mechanism to enable easy access to an IP geolocation database for Python applications. </h6>
-                            <p><b>By leveraging the power of the Django Rest Framework API and the convenience of JWT authentication, developers can quickly and easily create powerful applications that make use of IP geolocation data. 
-                                The Django Rest Framework API is a powerful tool for developers who want to create web APIs quickly and easily using the Django framework. With its built-in support for serialization, authentication, and validation, the Django Rest Framework API makes it easy for developers to create robust and secure APIs that can be used by a wide range of applications.
+                        <h5 class="blog-card-title">This application utilizes the Django framework and its Object-Relational Mapper (ORM) to facilitate the retrieval of stored data.</h6>
+                            <p><b>It is connected to a MySQL database hosted on the Pythonanywhere server. The software's primary objective is to enable users to execute complex filtering operations while prioritizing the speed and efficiency of querying.
+                                By utilizing this software, users can save valuable time by executing advanced filtering operations quickly and efficiently. Additionally, the software's Python and Django backend offer flexibility and customizability, making it an ideal choice for users who want to customize their querying process to fit their specific needs. 
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/geo_api_v1" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
+                        <a href="https://github.com/mjaroszewski1979/investors_v2" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <h2>Features:</h2>
@@ -84,21 +100,21 @@
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li>With a wide range of customizable components and responsive design, <strong>Bulma</strong> makes it easy to create beautiful and functional web interfaces that work well on both desktop and mobile devices.</li>
-                                <br>
-                                <li>This project has a strong and secure <strong>user authentication system</strong> that manages user accounts, cookies and sessions, and permissions, ensuring that users can access the resources they need while maintaining the security and integrity of the application.</li>
-                                <br>
                                 <li>Django's <strong>Cross-Site Request Forgery Protection</strong> works by using a unique token to validate each form submission on the server-side, and also includes other built-in security features like user authentication and authorization, password hashing, and SSL encryption to protect against common security threats.</li>
                                 <br>
-                                <li>To serve static files with high performance and efficiency, you can use <strong>WhiteNoise</strong> - a Python library that caches files in memory, compresses them on the fly, and can be configured to use HTTPS.</li>
+                                <li>With Django's<strong> annotate() function</strong>, developers can compute new fields based on existing queryset fields, like the average rating of a product, total comments on a blog post, or total orders by a customer, resulting in more efficient code and improved application performance.</li>
                                 <br>
-                                <li><strong>JSON Web Token (JWT)</strong> is a widely used security mechanism that allows for the exchange of information between a client and server in a secure and reliable manner. It uses a cryptographic algorithm to sign sensitive data and ensures that it cannot be altered once it has been issued.</li>
+                                <li>Django's <strong>aggregate() function</strong> is a powerful tool for developers to perform complex calculations and obtain summary statistics on a queryset efficiently with minimal code.</li>
+                                <br>
+                                <li>By using <strong>select_related</strong>, developers can significantly reduce the number of database queries needed to retrieve data, which can improve the performance of their application.</li>
                                 <br>
                                 <li><strong>Breaking down logic into smaller parts</strong>: to achieve improved code organization, maintainability, and scalability, while also making it easier to debug and test individual parts of the codebase I have created smaller, focused Django applications within the project.</li>
                                 <br>
                                 <li><strong>Writing most of the functionality in Django models or utility files instead of views</strong> to enhance application performance, as they are loaded only once when the application starts up, thus reducing loading and processing costs.</li>
                                 <br>
                                 <li>To ensure sensitive information is kept secure, we store API keys, database passwords, and other credentials in <strong>environment variables</strong>. </li>
+                                <br>
+                                <li>In Django, we can optimize tests by <strong>utilizing the setUp</strong> method to handle expensive setup operations for all tests within a module, which saves time and resources, and makes our tests more reliable. </li>
                                 <br>
                                 <li><strong>The page object pattern</strong> follows the DRY principle, minimizing code duplication, and creates an interface between web page elements and tests, resulting in more robust tests and better test organization.</li>
                             </ul>
