--- a/web_development.html
+++ b/web_development.html
@@ -80,66 +80,66 @@
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/global-macro.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html"><img src="assets/imgs/global-macro.png" class="blog-card-img" alt="global macro website mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">Designed to offer a user-friendly and visually appealing interface that engages users with dynamic and interactive graphs.</h6>
                         <p><b>HTMX is a front-end technology that allows the application to provide a more engaging and responsive experience without sacrificing performance or simplicity. This technology enables the application to make asynchronous HTTP requests to the server to fetch data and update the UI accordingly, creating a seamless experience for the user.
                             In addition to the HTMX functionality, this application also incorporates Bokeh, a powerful data visualization library that provides users with highly interactive and engaging graphs. Bokeh allows users to explore data in a visual way, providing more insight and making complex data sets more accessible. 
                         </b></p>
-                        <a href="global-macro.html" class="blog-card-link">Read more<i class="ti-angle-double-right"></i></a>
+                        <a href="explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html" class="blog-card-link">Read more<i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/famous-investors.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="customizable-querying-with-python-django-and-mysql-retrieve-your-data-with-ease.html"><img src="assets/imgs/famous-investors.png" class="blog-card-img" alt="famous ivestors website mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">This application utilizes the Django framework and its Object-Relational Mapper (ORM) to facilitate the retrieval of stored data.</h6>
                         <p><b>It is connected to a MySQL database hosted on the Pythonanywhere server. The software's primary objective is to enable users to execute complex filtering operations while prioritizing the speed and efficiency of querying.
                             By utilizing this software, users can save valuable time by executing advanced filtering operations quickly and efficiently. Additionally, the software's Python and Django backend offer flexibility and customizability, making it an ideal choice for users who want to customize their querying process to fit their specific needs.
                         </b></p>
-                        <a href="famous-investors.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="customizable-querying-with-python-django-and-mysql-retrieve-your-data-with-ease.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/django-cars.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html"><img src="assets/imgs/django-cars.png" class="blog-card-img" alt="Django Cars website mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">This Django application provides users the option to register and authenticate with their Google account.</h6>
                         <p><b>Once successfully logged in, users can create a customized list of their favorite cars and even upload images of their choice. One of the most noteworthy features of this application is the implementation of drag-and-drop reordering, which enables users to dynamically alter the order of elements in their list, which is then automatically reflected in the database.
                             he integration of HTMX technology into this Django application ensures that the user experience is smooth and seamless. HTMX is a modern tool that simplifies the development process by allowing developers to create interactive web pages with minimal effort.
                         </b></p>
-                        <a href="django-cars.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/golden-cross.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="django-and-yahoo-finance-api-your-tools-for-successful-bitcoin-trading.html"><img src="assets/imgs/golden-cross.png" class="blog-card-img" alt="Golden Cross Website Mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">This is a Python application that is designed to display trading signals based on a mathematical algorithm.</h6>
                         <p><b>The algorithm determines the ideal time to buy or sell Bitcoin. The application fetches data from the Yahoo Finance API and calculates the current trend direction using a 252-day lookback period which is approximately one year.
                             Once the calculations are complete, the results are presented in a user-friendly table format. This application is ideal for traders who are looking to make data-driven decisions when it comes to buying or selling Bitcoin. With the help of the algorithm, the application can analyze large amounts of data and provide recommendations on when to make a move.
                         </b></p>
-                        <a href="golden-cross.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="django-and-yahoo-finance-api-your-tools-for-successful-bitcoin-trading.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/geo-api.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html"><img src="assets/imgs/geo-api.png" class="blog-card-img" alt="Geo API website mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">This project is built on the Django Rest Framework API platform and uses the JSON Web Token authentication mechanism to enable easy access to an IP geolocation database for Python applications. </h6>
                         <p><b>By leveraging the power of the Django Rest Framework API and the convenience of JWT authentication, developers can quickly and easily create powerful applications that make use of IP geolocation data. 
                             The Django Rest Framework API is a powerful tool for developers who want to create web APIs quickly and easily using the Django framework. With its built-in support for serialization, authentication, and validation, the Django Rest Framework API makes it easy for developers to create robust and secure APIs that can be used by a wide range of applications.
                         </b></p>
-                        <a href="geo-api.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
     
